# ros-seminar

./: README.md  msw
assignment/: CMakeLists.txt  package.xml  과제.txt
assignment/src/: listener.cpp  position_node.cpp  state_node.cpp
assignment/srv/: SetPosition.srv  SetState.srv
ros_tutorials_service/: CMakeLists.txt  package.xml
ros_tutorials_service/src/: service_client.cpp  service_server.cpp
ros_tutorials_topic/: CMakeLists.txt  package.xml
ros_tutorials_topic/src/: topic_publisher.cpp  topic_subscriber.cpp
